--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "nodemon": "^2.0.4"
-  }
+  "dependencies": {}
 }
