--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "web-deneme",
+  "name": "project",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
-  "engines": {
-    "node": "12.11.1"
-  },
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
+    "handlebars": "^4.5.3",
+    "mongoose": "^5.3.4"
+  },
+  "devDependencies": {}
 }
